# Nao

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  MSVC.ruleset  Nao.code-workspace  Nao.cpp  Nao.h  Nao.sln  README.md  vcpkg.json
Nao/: CMakeLists.txt  COPYING  Frameworks.h  MainWindow.cpp  MainWindow.h  Nao.cpp  Nao.exe.manifest  Nao.rc  Nao.vcxproj  Nao.vcxproj.filters  Resource.h  Source.cpp  audio_player.cpp  audio_player.h  auto_wrapper.cpp  auto_wrapper.h  binary_stream.cpp  binary_stream.h  byte_array_streambuf.cpp  byte_array_streambuf.h  child_window.cpp  child_window.h  com.cpp  com.h  com_thread.cpp  com_thread.h  concepts.h  data_model.cpp  data_model.h  dimensions.h  direct2d.cpp  direct2d.h  direct2d_image_display.cpp  direct2d_image_display.h  direct2d_window.cpp  direct2d_window.h  drive_list.cpp  drive_list.h  dynamic_library.cpp  dynamic_library.h  (+132 more)
Nao/include/: left_window.h  nao_model.h  nao_presenter.h  nao_window.h  path.h
Nao/providers/: filesystem_provider.cpp  filesystem_provider.h  wav_provider.cpp  wav_provider.h  wsp_provider.cpp  wsp_provider.h
Nao/src/: Nao.cpp  left_window.cpp  nao_model.cpp  nao_presenter.cpp  nao_window.cpp  path.cpp
Nao/ui/: audio_player.cpp  audio_player.h  dimensions.h  left_window.cpp  left_window.h  line_edit.cpp  line_edit.h  list_view.cpp  list_view.h  main_window.cpp  main_window.h  push_button.cpp  push_button.h  right_window.cpp  right_window.h  ui_element.cpp  ui_element.h
include/: naofs.hpp
include/archive/: archive.hpp  cridat.hpp  cripak.hpp  directory.hpp
include/util/: cripak_utf.hpp  exceptions.hpp  file_stream.hpp  fstream_file.hpp  mmapped_file.hpp  partial_file.hpp
lib/FFmpeg/include/libavutil/: ffversion.h
lib/libopusfile/: Modified.txt
lib/libopusfile/include/: opusfile.h
lib/portaudio/: LICENSE.txt
libnao-av/: CMakeLists.txt
libnao-av/include/libnao/: libnao_av.h
libnao-av/include/libnao/av/: image.h
libnao-av/src/: image.cpp  libnao_av.cpp
libnao-core/: internal.cpp  libnao-core.licenseheader  libnao-core.vcxproj  libnao-core.vcxproj.filters
libnao-core/include/: internal.h  naocore_defs.h
libnao-core/include/nao/: concepts.h  error.h  functional.h  list.h  memory.h  string.h  string_view.h  vector.h
libnao-core/nao/: unordered_set.h
libnao-core/src/: dllmain.cpp  internal.cpp  string.cpp  string_view.cpp
libnao-game/: CMakeLists.txt
libnao-game/include/libnao/: libnao_game.h
libnao-game/include/libnao/game/: item.h  item_handler.h
libnao-game/src/: item_handler.cpp  libnao_game.cpp
libnao-ui/: .gitignore  CMakeLists.txt  libnao-ui.licenseheader  libnao-ui.vcxproj  libnao-ui.vcxproj.filters
libnao-ui/include/: libnao-ui.h  message_loop.h  naoui_defs.h  window.h
libnao-ui/include/libnao/: event.h  horizontal_layout.h  layout.h  libnao-ui.h  libnao_ui.h  main_window.h  message_loop.h  push_button.h  window.h
libnao-ui/include/libnao/ui/: defs.h  directional_layout.h  event.h  file_dialog.h  horizontal_layout.h  icon.h  layout.h  line_edit.h  list_view.h  main_window.h  message_loop.h  push_button.h  window.h
libnao-ui/include/nao/: push_button.h  widget.h
libnao-ui/include/nao/platform/: win32.h
libnao-ui/src/: defs.cpp  directional_layout.cpp  dllmain.cpp  event.cpp  file_dialog.cpp  horizontal_layout.cpp  icon.cpp  layout.cpp  libnao-ui.cpp  libnao_ui.cpp  line_edit.cpp  list_view.cpp  main_window.cpp  message_loop.cpp  push_button.cpp  widget.cpp  window.cpp
libnao-ui/src/nao/: push_button.cpp
libnao-ui/src/nao/platform/: win32.cpp
libnao-util/: CMakeLists.txt  libnao-util.licenseheader  libnao-util.vcxproj  libnao-util.vcxproj.filters
libnao-util/include/: _win32_formatters.h  encoding.h  logging.h  naoutil_defs.h  steam.h  strings.h  vdf_parser.h  windows_min.h
libnao-util/include/libnao/: encoding.h  libnao_util.h  logging.h  ranges.h  traits.h
libnao-util/include/libnao/util/: _win32_formatters.h  binary_stream.h  concepts.h  defs.h  encoding.h  event_handler.h  formatters.h  logging.h  ranges.h  shared_library.h  thread_pool.h  win32.h  win32_compat.h
libnao-util/include/nao/: logging.h  steam.h  strings.h
libnao-util/src/: binary_stream.cpp  defs.cpp  dllmain.cpp  encoding.cpp  libnao_util.cpp  logging.cpp  shared_library.cpp  steam.cpp  strings.cpp  thread_pool.cpp  win32.cpp
naofs/: CMakeLists.txt
naofs/include/: projection.h
naofs/src/: naofs.cpp  projection.cpp
revorb-patch/: revorb-patch.cpp  revorb-patch.vcxproj  revorb-patch.vcxproj.filters
src/: Nao.cpp  main.cpp  naofs.cpp
src/archive/: archive.cpp  cridat.cpp  cripak.cpp  directory.cpp
src/util/: cripak_utf.cpp  file_stream.cpp  fstream_file.cpp  mmapped_file.cpp  partial_file.cpp
